// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  className="item-view one-column orion-fusion-theme"
>
  <div
    className="body"
  />
</div>
`;

exports[`should render 1 start theme display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="single-result-column-container"
    >
      <div
        className="content content-primary-size content-primary-color"
      >
        <ItemDisplay
          iconAlignment="center"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isDisabled={false}
          isTruncated={false}
          text="display 1"
          textStyle="primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 2 start theme displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content content-primary-size content-primary-color"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-secondary-color"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="primary"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 3 start theme displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content content-primary-size content-primary-color"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-primary-color"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-secondary-color"
            key="2"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 3"
              textStyle="primary"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a comment 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <ItemComment
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isTruncated={false}
      text="comment"
      textStyle="attention"
    />
  </div>
</div>
`;

exports[`should render a default component 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  />
</div>
`;

exports[`should render a singular display not in an unordered list 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="single-result-column-container"
    >
      <div
        className="content content-primary-size content-primary-color"
      >
        <ItemDisplay
          iconAlignment="center"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isDisabled={false}
          isTruncated={false}
          text="display 1"
          textStyle="primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a start accessory 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-center"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="body"
  />
</div>
`;

exports[`should render an accessory center aligned 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-center"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="body"
  />
</div>
`;

exports[`should render an accessory top aligned 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-top"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="body"
  />
</div>
`;

exports[`should render an end accessory 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  />
  <div
    className="accessory end-accessory accessory-align-center"
  >
    <img
      alt="Graphic"
    />
  </div>
</div>
`;

exports[`should render displays with original styling when overrideDefaultStyling prop is true 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="strong"
            />
          </li>
          <li
            className="content"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="attention"
            />
          </li>
          <li
            className="content"
            key="2"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 3"
              textStyle="secondary"
            />
          </li>
          <li
            className="content"
            key="3"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 4"
              textStyle="strikeThrough"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render each column as an unordered list within a primary unordered list for two column layout 1`] = `
<div
  className="item-view two-columns"
>
  <div
    className="body"
  >
    <div>
      <ul
        className="column-list-container"
      >
        <li
          className="primary-column"
          key="0"
        >
          <ul
            className="column-list"
            key="0"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 1"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 3"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
        <li
          className="secondary-column"
          key="1"
        >
          <ul
            className="column-list"
            key="1"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 2"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render one column 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content content-primary-size content-primary-color"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-secondary-color"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="primary"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render several displays in an unordered list for one column layout 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content content-primary-size content-primary-color"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-primary-color"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-secondary-color"
            key="2"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 3"
              textStyle="primary"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render start accessory space reserved 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-center"
  />
  <div
    className="body"
  />
</div>
`;

exports[`should render truncated display 1`] = `
<div
  className="item-view is-truncated one-column"
>
  <div
    className="body"
  >
    <div
      className="single-result-column-container"
    >
      <div
        className="content content-primary-size content-primary-color"
      >
        <ItemDisplay
          iconAlignment="center"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isDisabled={false}
          isTruncated={false}
          text="display1display1display1display1display1display1display1display1"
          textStyle="primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render truncated display when isTruncated is only set on the display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="single-result-column-container"
    >
      <div
        className="content content-primary-size content-primary-color"
      >
        <ItemDisplay
          iconAlignment="center"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isDisabled={false}
          isTruncated={true}
          text="display1display1display1display1display1display1display1display1"
          textStyle="primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render truncated two column displays when isTruncated is only set on the display 1`] = `
<div
  className="item-view truncated-two-columns"
>
  <div
    className="body"
  >
    <div>
      <ul
        className="column-list-container"
      >
        <li
          className="primary-column"
          key="0"
        >
          <ul
            className="column-list"
            key="0"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <InjectIntl(ItemDisplay)
                isTruncated={true}
                text="display1display1display1display1display1display1display1display1"
              />
            </li>
          </ul>
        </li>
        <li
          className="secondary-column"
          key="1"
        >
          <ul
            className="column-list"
            key="1"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <InjectIntl(ItemDisplay)
                text="display2display2display2display2display2display2display2display2"
              />
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render two columns with 8 displays 1`] = `
<div
  className="item-view two-columns"
>
  <div
    className="body"
  >
    <div>
      <ul
        className="column-list-container"
      >
        <li
          className="primary-column"
          key="0"
        >
          <ul
            className="column-list"
            key="0"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 1"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-primary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 3"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="2"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 5"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="3"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 7"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
        <li
          className="secondary-column"
          key="1"
        >
          <ul
            className="column-list"
            key="1"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 2"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-primary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 4"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="2"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 6"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="3"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 8"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render two columns with 8 displays when trueColumn is false 1`] = `
<div
  className="item-view two-columns-by-row"
>
  <div
    className="body"
  >
    <div>
      <ul
        className="row-list-container"
      >
        <li
          className="row"
          key="0"
        >
          <ul
            className="row-list"
            key="0"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 1"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-primary-size content-primary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 2"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
        <li
          className="row"
          key="1"
        >
          <ul
            className="row-list"
            key="1"
          >
            <li
              className="content content-secondary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 3"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-primary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 4"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
        <li
          className="row"
          key="2"
        >
          <ul
            className="row-list"
            key="2"
          >
            <li
              className="content content-secondary-size content-secondary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 5"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 6"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
        <li
          className="row"
          key="3"
        >
          <ul
            className="row-list"
            key="3"
          >
            <li
              className="content content-secondary-size content-secondary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 7"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 8"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render two columns with an odd number of displays 1`] = `
<div
  className="item-view two-columns"
>
  <div
    className="body"
  >
    <div>
      <ul
        className="column-list-container"
      >
        <li
          className="primary-column"
          key="0"
        >
          <ul
            className="column-list"
            key="0"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 1"
                textStyle="primary"
              />
            </li>
            <li
              className="content content-secondary-size content-secondary-color"
              key="1"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 3"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
        <li
          className="secondary-column"
          key="1"
        >
          <ul
            className="column-list"
            key="1"
          >
            <li
              className="content content-primary-size content-primary-color"
              key="0"
            >
              <ItemDisplay
                iconAlignment="center"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatHTMLMessage": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatPlural": [Function],
                    "formatRelative": [Function],
                    "formatTime": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralFormat": [Function],
                      "getRelativeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": null,
                    "now": [Function],
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": null,
                  }
                }
                isDisabled={false}
                isTruncated={false}
                text="display 2"
                textStyle="primary"
              />
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render with 1 display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="single-result-column-container"
    >
      <div
        className="content content-primary-size content-primary-color"
      >
        <ItemDisplay
          iconAlignment="center"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isDisabled={false}
          isTruncated={false}
          text="display 1"
          textStyle="primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with 2 displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content content-primary-size content-primary-color"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-secondary-color"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="primary"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with 3 displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div>
      <div>
        <ul
          className="column-list-container"
        >
          <li
            className="content content-primary-size content-primary-color"
            key="0"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 1"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-primary-color"
            key="1"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 2"
              textStyle="primary"
            />
          </li>
          <li
            className="content content-secondary-size content-secondary-color"
            key="2"
          >
            <ItemDisplay
              iconAlignment="center"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
              isDisabled={false}
              isTruncated={false}
              text="display 3"
              textStyle="primary"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with a display and graphic 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="single-result-column-container"
    >
      <div
        className="content content-primary-size content-primary-color"
      >
        <ItemDisplay
          icon={
            <img
              alt="Graphic"
            />
          }
          iconAlignment="center"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isDisabled={false}
          isTruncated={false}
          text="display 1"
          textStyle="primary"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with null display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  />
</div>
`;
